KryptonSettings: added systemui tuner preference
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -137,6 +137,8 @@
     <string name="power_button_torch_timeout_title">Timeout for long press power gesture</string>
     <string name="power_button_torch_timeout_summary">Number of seconds after which torch will be toggled off automatically</string>
     <string name="power_button_torch_timeout_dialog_title">Timeout in seconds</string>
+    <string name="systemui_tuner_preference_title">SystemUI Tuner</string>
+    <string name="systemui_tuner_preference_summary">Experimental tweaks in SystemUI</string>
 
     <!-- Gaming Mode Settings -->
     <string name="gamingmode_settings_title">Gaming Mode</string>
