--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -90,6 +90,15 @@
     <string name="qs_footer_text_title">QS footer text</string>
     <string name="qs_footer_text_summary">If no text is specified then KOSP will be shown by default</string>
 
+    <!-- Network Traffic -->
+    <string name="network_traffic_category_title">Network Traffic</string>
+    <string name="statusbar_show_network_traffic_title">Show network traffic in statusbar</string>
+    <string name="statusbar_network_traffic_threshold_tx_title">Auto hide threshold for upload</string>
+    <string name="statusbar_network_traffic_threshold_tx_summary">Threshold value below which upload speed indicator will be hidden</string>
+    <string name="statusbar_network_traffic_threshold_rx_title">Auto hide threshold for download</string>
+    <string name="statusbar_network_traffic_threshold_rx_summary">Threshold value below which download speed indicator will be hidden</string>
+    <string name="statusbar_network_traffic_threshold_dialog_title">Threshold value in KiB/s</string>
+
     <!-- Battery -->
     <string name="statusbar_battery_category_title">Battery</string>
     <string name="statusbar_battery_style_title">Battery icon style</string>
