--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -52,6 +52,14 @@
     <string name="statusbar_network_traffic_rate_text_scale_factor_title">Network traffic rate text scale factor</string>
     <string name="statusbar_network_traffic_rate_text_scale_factor_dialog_title">Scale factor</string>
 
+    <!-- Lockscree settings -->
+    <string name="lockscreen_settings_title">Lockscreen settings</string>
+    <string name="lockscreen_settings_summary">Charging info</string>
+
+    <!-- Lockscreen battery info -->
+    <string name="lockscreen_charging_info_title">Show charging info in lockscreen</string>
+    <string name="lockscreen_charging_info_summary">Shows temperature, charging current and more while plugged in</string>
+
     <!-- Device settings -->
     <string name="device_settings_title">Device settings</string>
     <string name="device_settings_summary">Settings for device specific parts</string>
