krypton: Double tap to sleep on lockscreen [2/2]
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,4 +64,8 @@
     <string name="device_settings_title">Device settings</string>
     <string name="device_settings_summary">Settings for device specific parts</string>
 
+    <!--Double Tap to Sleep Lockscreen-->
+    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
+    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreeen to sleep</string>
+
 </resources>
