--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="accurate_shades_title">Use accurate shades</string>
     <string name="use_wallpaper_color_title">Use wallpaper color</string>
     <string name="color_override_title">Custom color picker</string>
+    <string name="color_override_summary">"Choose a custom accent color to override the colors chosen by monet engine"</string>
     <string name="invalid_color_input">Invalid color input!</string>
     <string name="chroma_factor_title">Colorfulness</string>
     <string name="linear_lightness_title">Use custom lightness scale</string>
