--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -19,7 +19,7 @@
 
     <!-- Theme settings -->
     <string name="theme_settings_title">主题</string>
-    <string name="theme_settings_summary">莫奈</string>
+    <string name="theme_settings_summary">Monet</string>
 
     <!-- Color picker -->
     <string name="rgb">RGB</string>
@@ -29,12 +29,12 @@
     <string name="confirm">确认</string>
 
     <!-- Monet engine -->
-    <string name="monet_engine_settings_title">莫奈引擎</string>
+    <string name="monet_engine_settings_title">Monet 引擎</string>
     <string name="monet_engine_settings_summary">自定义颜色、色彩、亮度</string>
     <string name="accurate_shades_title">调整界面色调</string>
     <string name="use_wallpaper_color_title">使用壁纸颜色</string>
     <string name="color_override_title">自定义颜色选择</string>
-    <string name="color_override_summary">"选择一个强调色来覆盖莫奈引擎选择的颜色"</string>
+    <string name="color_override_summary">"选择一个强调色来覆盖 Monet 引擎选择的颜色"</string>
     <string name="invalid_color_input">颜色输入错误!</string>
     <string name="chroma_factor_title">色彩</string>
     <string name="linear_lightness_title">调整界面亮度</string>
