KryptonSettings: Allow doubletap/longpress power to toggle torch [2/2]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -83,4 +83,13 @@
     <string name="location_privacy_indicator_title">Show privacy indicator for location</string>
     <string name="location_privacy_indicator_summary">Reboot to take effect</string>
 
+    <!-- Miscellaneous -->
+    <string name="miscellaneous_settings_summary">Gestures</string>
+
+    <!-- Torch Power button gestures -->
+    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
+    <string name="torch_power_button_gesture_none">Disabled</string>
+    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
+    <string name="torch_power_button_gesture_lp">Long press power button</string>
+
 </resources>
