--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -84,12 +84,15 @@
     <string name="location_privacy_indicator_summary">Reboot to take effect</string>
 
     <!-- Miscellaneous -->
-    <string name="miscellaneous_settings_summary">Gestures</string>
+    <string name="miscellaneous_settings_summary">Gestures, Screenshot sound</string>
 
     <!-- Torch Power button gestures -->
     <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
     <string name="torch_power_button_gesture_none">Disabled</string>
     <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
     <string name="torch_power_button_gesture_lp">Long press power button</string>
+
+    <!-- Screenshot shutter -->
+    <string name="screenshot_shutter_sound_title">Screenshot sound</string>
 
 </resources>
