--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -314,7 +314,7 @@
     <string name="screen_time_summary_usage_today">%1$s today</string>
 
     <!-- Annoying Notifs -->
-    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
+    <string name="notification_sound_vib_screen_on_title">Notification alert</string>
     <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
 
 </resources>
