krypton: Update strings for location privacy indicator
* Restarting system UI is enough

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,7 +81,7 @@
 
     <!-- Location privacy indicator -->
     <string name="location_privacy_indicator_title">Show privacy indicator for location</string>
-    <string name="location_privacy_indicator_summary">Reboot to take effect</string>
+    <string name="location_privacy_indicator_summary">Reboot or restart system UI for it to take effect</string>
 
     <!-- Miscellaneous -->
     <string name="miscellaneous_settings_summary">Gestures, Screenshot sound</string>
