--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,6 +53,15 @@
     <string name="statusbar_network_traffic_rate_text_scale_factor_title">Network traffic rate text scale factor</string>
     <string name="statusbar_network_traffic_rate_text_scale_factor_dialog_title">Scale factor</string>
 
+    <!-- QS Brightness -->
+    <string name="qs_brightness_category_title">Brightness slider</string>
+    <string name="qs_show_brightness_title">Show brightness slider in QS panel</string>
+    <string name="qqs_show_brightness_title">Show brightness slider in QQS panel</string>
+    <string name="qs_brightness_position_bottom_title">Bottom brightness slider</string>
+    <string name="qs_brightness_position_bottom_summary_on">Position: Bottom</string>
+    <string name="qs_brightness_position_bottom_summary_off">Position: Top</string>
+    <string name="qs_show_auto_brightness_button_title">Show auto brightness button</string>
+
     <!-- Combined signal icons in status bar -->
     <string name="combined_status_bar_signal_icons">Combined signal icons</string>
     <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar. Needs SystemUI restart or reboot</string>
