--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -116,4 +116,8 @@
     <string name="search">Search</string>
     <string name="search_apps">Search apps</string>
 
+    <!-- Volume key music control -->
+    <string name="volume_button_music_control_title">Skip tracks with volume buttons</string>
+    <string name="volume_button_music_control_summary">Long press volume up for skipping to the next track and vice-versa</string>
+
 </resources>
